--- a/src/app/components/service/service.html
+++ b/src/app/components/service/service.html
@@ -1,6 +1,7 @@
 <section class="parent" id="service">
   <div class="div1">
     <div>
+      <h2>Servicios</h2>
       <h3>Medicina y Consultas</h3>
       <p>
         La Medicina Interna es la especialidad médica hospitalaria que engloba el diagnóstico,
