--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@
     --principalSombra: #314c66;
     --texto: #000;
     --subtitulo: #444;
-    --fondo: #fff;
+    --fondo: #bbe4e9;
     --fondo-secundario: #bbe4e9;
 }
 
