--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -37,4 +37,10 @@
           </li>
         </ul>
       </nav>
+      <div class="logout-container">
+        <button class="logout-button" (click)="logout()">
+          <span class="icon">🚪</span>
+          <span class="link-text">Cerrar Sesión</span>
+        </button>
+      </div>
     </aside>
