--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -21,5 +21,6 @@
             {{error}}
         </span>
     </form>
+    <a href="#" class="link-text" (click)="volver()">volver</a>
     </div>
 </main>
