funcionalidades de clientes

--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -35,6 +35,16 @@
               <span class="link-text">Veterinarios</span>
             </a>
           </li>
+           <li>
+            <a 
+              routerLink="/dashboard/clientes" 
+              routerLinkActive="active"
+              class="sidebar-link"
+            >
+              <span class="icon">👨‍💼</span>
+              <span class="link-text">Cliente</span>
+            </a>
+          </li>
         </ul>
       </nav>
       <div class="logout-container">
