funcionalidades de razas

--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -45,6 +45,16 @@
               <span class="link-text">Cliente</span>
             </a>
           </li>
+          <li>
+            <a 
+              routerLink="/dashboard/razas" 
+              routerLinkActive="active"
+              class="sidebar-link"
+            >
+              <span class="icon">🐕</span>
+              <span class="link-text">Razas</span>
+            </a>
+          </li>
         </ul>
       </nav>
       <div class="logout-container">
