--- a/src/app/pages/clientes/clientes.html
+++ b/src/app/pages/clientes/clientes.html
@@ -17,6 +17,10 @@
           class="search-input">
       </div>
     </div>
+    <!-- Botón para crear nuevo veterinario -->
+    <div class="create-btn-container">
+      <button class="btn-crear" (click)="crearNuevoCliente()">Crear Nuevo Cliente</button>
+    </div>
     
     <!-- Mostrar mensaje de carga -->
     <div *ngIf="cargando" class="loading">
