--- a/src/app/components/hero/hero.css
+++ b/src/app/components/hero/hero.css
@@ -54,7 +54,7 @@
 .Section-Descripcion h1 {
   font-size: 3rem;
   font-weight: 800;
-  color: var(--texto);
+  color: var(--principal);
   line-height: 1.2;
   margin: 0;
   position: relative;
